1999-09-18  Gary Houston  <ghouston@freewire.co.uk>

	* configure.in: use AC_SYS_RESTARTABLE_SYSCALLS instead of
	testing for SA_RESTART.

1999-09-12  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* configure.in: Removed ice-9/version.scm from AC_OUTPUT.

1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	* configure.in (GUILE_STAMP): Don't set this variable, or
	substitute it into anything.  Full explanation in ice-9/ChangeLog.
	* configure, Makefile.in: Regenerated.
	
1999-09-06  James Blandy  <jimb@mule.m17n.org>

	Propagate the changes of 2 Sept the rest of the way through.
	* configure: Regenerated.
	* Makefile.in: Regenerated.  Not sure why this diff is so big.

1999-09-02  Jim Blandy  <jimb@savonarola.red-bean.com>

	* acinclude.m4 (GUILE_HEADER_LIBC_WITH_UNISTD): Fix typo in
	variable name.  (Thanks to Bill Schottstaedt.)
	* aclocal.m4: Regenerated.

1999-09-02  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* configure.in: Test for presence of function on_exit.

1999-09-01  James Blandy  <jimb@mule.m17n.org>

	* configure.in: Use AC_REPLACE_FUNCS to grab libguile/memmove.c if
	the system doesn't have memmove.  Don't test for memmove and bcopy
	with AC_CHECK_FUNCS.
	* configure: Regenerated.

1999-08-30  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* configure.in: Test for atexit.

1999-08-29  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* acinclude.m4: Updated.  (Thanks to Karl Eichwalder.)

	* configure.in: Test for presence of S_ISLNK in sys/stat.h.
	(Thanks to Bernard Urban.)
	Test for memmove and bcopy.  (Thanks to
	suzukis@file.phys.tohoku.ac.jp.)

	* acconfig.h: Added HAVE_S_ISLNK.

1999-08-20  James Blandy  <jimb@mule.m17n.org>

	* Guile 1.3.2 released.

	* Makefile.in: Regenerated.

1999-07-24  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* README, config.guess, config.sub, liconfig, ltmain.sh: Switched
	to libtool-1.3.3.

1999-07-22  Marius Vollmer  <mvo@zagadka.ping.de>

	Added guile-readline subdirectory with the removed readline