@@ -321,6 +321,9 @@
 /* Define if you have the sigaction function.  */
 #undef HAVE_SIGACTION
 
+/* Define if you have the siginterrupt function.  */
+#undef HAVE_SIGINTERRUPT
+
 /* Define if you have the socketpair function.  */
 #undef HAVE_SOCKETPAIR
 
