@@ -1,3 +1,7 @@
+1999-09-20  Gary Houston  <ghouston@freewire.co.uk>
+
+	* configure.in: check availability of siginterrupt.
+
 1999-09-18  Gary Houston  <ghouston@freewire.co.uk>
 
 	* configure.in: use AC_SYS_RESTARTABLE_SYSCALLS instead of
